# vpm2

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-06-24-vpm2-pipeline.md  2026-06-25-dubbing-sync-research.md
docs/superpowers/specs/: 2026-06-24-vpm2-design.md
tests/: test_artifacts.py  test_cli.py  test_pipeline.py  test_synthesize.py  test_timeline.py  test_translate.py  test_translate_prompt.py  test_url.py  test_voice_sample.py
vpm2/: artifacts.py  cli.py  config.py  context.py  gpu.py  pipeline.py  preflight.py  progress.py  timeline.py  translate_prompt.py  url.py  voice_sample.py
vpm2/stages/: assemble.py  base.py  download.py  extract_audio.py  synthesize.py  transcribe.py  translate.py
vpm2/tts/: base.py  chatterbox_backend.py
