[project]
name = "vpm2"
version = "0.1.0"
description = "Translate English YouTube videos into a synced PT-BR dub, fully local."
requires-python = ">=3.11"
dependencies = [
    "yt-dlp",
    "requests",
    "soundfile",
    "numpy",
    "faster-whisper",
]

[project.scripts]
vpm2 = "vpm2.cli:main"

[dependency-groups]
dev = ["pytest"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vpm2"]
