[project]
name = "vpm2"
version = "0.1.0"
description = "Translate English YouTube videos into a synced PT-BR dub, fully local."
requires-python = ">=3.11"
dependencies = [
    "yt-dlp",
    "python-dotenv",
    "requests",
    "soundfile",
    "numpy",
    "faster-whisper",
    "chatterbox-tts>=0.1.7",
    "rich",
]

[project.scripts]
vpm2 = "vpm2.cli:main"

[dependency-groups]
dev = ["pytest"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vpm2"]

[tool.uv]
# chatterbox-tts 0.1.7 hard-pins torch==2.6.0, which has no cu128 build.
# The RTX 5060 Ti (Blackwell, sm_120) requires cu128 -> override to torch 2.7+.
override-dependencies = ["torch>=2.7.0", "torchaudio>=2.7.0"]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }
